# studio-4t

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  deploy-website.yml  release.yml
docs/: beta-query-plan.md  remaining-menu-items.md
src/: App.css  App.vue  connect.js  main.js
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: main.desktop
src-tauri/src/: collection_history.rs  commands.rs  default_queries.rs  error.rs  export_watermarks.rs  folders.rs  history.rs  integration_tests.rs  json_store.rs  keybindings.rs  keychain.rs  known_hosts.rs  lib.rs  main.rs  menu.rs  node_tags.rs  operations.rs  persist.rs  pool.rs  saved_queries.rs  settings.rs  shell_history.rs  ssh.rs  storage.rs  tabs.rs  tasks.rs  uri.rs
src-tauri/src/commands/: admin.rs  admin.test.rs  compare.rs  connection.rs  copyops.rs  duplicate.rs  folders.rs  functions.rs  gridfs.rs  history.rs  mapreduce.rs  masking.rs  migration.rs  mod.rs  operations.rs  persistence.rs  portmap.rs  profiler.rs  query.rs  reschema.rs  schema.rs  search.rs  serverinfo.rs  shell.rs  sql.rs  stats.rs  tasks.rs  tests.rs  users.rs
src-tauri/src/commands/compare/: compare.test.rs  mod.rs
src-tauri/src/commands/duplicate/: duplicate.test.rs  mod.rs
src-tauri/src/commands/gridfs/: mod.rs  tests.rs
src-tauri/src/commands/masking/: masking.test.rs  mod.rs
src-tauri/src/commands/migration/: mod.rs  tests.rs
src-tauri/src/commands/profiler/: mod.rs  tests.rs
src-tauri/src/commands/schema/: mod.rs  schema.test.rs
src-tauri/src/commands/search/: mod.rs  search.test.rs
src-tauri/src/commands/serverinfo/: mod.rs  tests.rs
src-tauri/src/commands/sql/: mod.rs  sql.test.rs
src-tauri/src/commands/stats/: mod.rs  stats.test.rs
src-tauri/src/known_hosts/: mod.rs  tests.rs
src-tauri/src/shell/: bridge.rs  engine.rs  mod.rs
src-tauri/src/shell/bridge/: bridge.test.rs  mod.rs  tests.rs
src-tauri/src/storage/: mod.rs  storage.test.rs  tests.rs
src-tauri/src/uri/: mod.rs  tests.rs  uri.test.rs
src/assets/: theme.css
src/components/: AboutModal.vue  AppModals.vue  BaseIcon.vue  CompareModal.vue  ConnectionManager.vue  ConnectionTree.vue  ContextMenu.vue  CurrentOpsModal.vue  DatabaseStatsModal.vue  DeleteDocumentsModal.vue  DocumentModal.vue  ExplainGraph.vue  ExplainResultView.vue  FieldEditModal.vue  FunctionsModal.vue  GridFsModal.vue  ImportExportWizard.vue  JsonDoc.vue  JsonResultView.vue  MapReduceModal.vue  MaskingModal.vue  Menubar.vue  MigrationModal.vue  NewConnection.vue  PipelineEditor.vue  PreferencesModal.vue  ProfilerModal.vue  QueryBar.vue  QueryBrowserModal.vue  QueryCodeView.vue  QueryWorkspace.vue  QuickstartPane.vue  ReschemaModal.vue  ResultTable.vue  ResultsPanel.vue  RolesModal.vue  SchemaModal.vue  SearchModal.vue  ServerChartsModal.vue  ServerInfoModal.vue  (+17 more)
src/components/admin/: CurrentOpsModal.vue  DatabaseStatsModal.vue  FunctionsModal.vue  ProfilerModal.vue  RolesModal.vue  ServerChartsModal.vue  ServerInfoModal.vue  ServerStatusModal.vue  StatsModal.vue  TasksModal.vue  UsersModal.vue  ValidatorModal.vue
src/components/app/: AboutModal.vue  AppModals.vue  OperationsPane.vue  PaneWorkspace.vue  PreferencesModal.vue  ShellConsole.vue  ShortcutsModal.vue  Toolbar.vue
src/components/base/: BaseButton.vue  BaseCheckbox.vue  BaseIcon.vue  BaseInput.vue  BaseModal.vue  BaseModalBody.vue  BaseModalFoot.vue  BaseRadio.vue  BaseSelect.vue  BaseTextarea.vue  CodeEditor.vue  ContextMenu.vue  Disclosure.vue  FieldError.vue  FormField.vue  HintText.vue  KeybindButton.vue  MenuItem.vue  NumberStepper.vue  RawToggle.vue  ReorderButtons.vue  Resizer.vue  SearchBar.vue  SegmentedControl.vue  SelectCard.vue  SplitContainer.vue  StateMessage.vue  TabBar.vue  TabStrip.vue  ToolbarButton.vue  TreeView.vue
src/components/connect/: ConnectDialog.vue
src/components/connection/: ConnectDialog.vue  ConnectionManager.vue  ConnectionTree.vue  NewConnection.vue  SshHostKeyModal.vue
src/components/database/: collection.vue  collections.vue  connection.vue  database.vue
src/components/menubar/: menubar-options-modal.vue  menubar.vue
src/components/query/: ComparePane.vue  CsvImportPane.vue  ImportPane.vue  IndexAddDialog.vue  IndexManagerPane.vue  MapReduceModal.vue  MaskingPane.vue  PipelineEditor.vue  QueryBar.vue  QueryBrowserModal.vue  QueryWorkspace.vue  QuickstartPane.vue  ReschemaPane.vue  SchemaPane.vue  SearchPane.vue  SqlModal.vue  SqlQueryBar.vue  TasksPane.vue  VisualQueryBuilder.vue
src/components/results/: DeleteDocumentsModal.vue  DocumentEditorPage.vue  JsonDoc.vue  (+10 more)
src/composables/: useColumnReorder.js  useColumnReorder.test.js  useConfirmDelete.js  useDbActions.js  useDbTransfer.js  useDocumentActions.js  useDragResize.js  useFeatures.js  useIndexes.js  useMenu.js  useModals.js  useModals.test.js  useNodeTags.js  useOperations.js  useQueryRunner.js  useResultSearch.js  useSessionPersistence.js  useSshHostKey.js  useTabs.js  useToast.js
src/constants/: modalRegistry.js  modalRegistry.test.js  tools.js
src/data/: connectionOptions.js
src/pages/: connect-main.js  connect.html  document-main.js  document.html
src/utils/: clipboardCopy.js  clipboardCopy.test.js  connectionUri.js  connectionUri.test.js  dateTags.js  dateTags.test.js  dbRef.js  dbRef.test.js  docEdit.js  docEdit.test.js  docEditor.js  docJson.js  docJson.test.js  errors.js  errors.test.js  explainTree.js  explainTree.test.js  index.js  indexSpec.js  indexSpec.test.js  inputUndo.js  jsonView.js  keybindings.js  keybindings.test.js  menuContext.js  menuContext.test.js  mongoFormat.js  predefinedQuery.js  predefinedQuery.test.js  queryCodegen.js  queryCodegen.test.js  queryParser.js  queryParser.test.js  shellEditor.js  tabColor.js  taskSchedule.js  taskSchedule.test.js  vqbGenerator.js
(+15 files in other folders)
