[package]
name = "studio-4t"
version = "0.1.0"
description = "An open-source, free desktop GUI for managing MongoDB — a community alternative to Studio 3T."
authors = ["Akhilbek Abilaev <abilaevaqil@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/AqilbekAbilaev/studio-4t"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "studio_4t_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde_json = "1"
tokio = { version = "1.32.0", features = ["full"] }
# Async read/write extension traits for the mongodb GridFS upload/download streams
# (they implement the futures-io traits).
futures-util = "0.3"
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
# Pure-Rust async SSH client for the optional SSH tunnel (port-forward to the
# remote MongoDB host). Integrates with the existing tokio runtime. Use the
# `ring` crypto backend (already built via mongodb's rustls) instead of the
# default aws-lc-rs, to avoid a second C/asm crypto build.
russh = { version = "0.61", default-features = false, features = ["ring", "flate2", "rsa"] }
# Pure-Rust JavaScript engine powering the embedded shell (IntelliShell). Pure
# Rust keeps cross-platform Tauri builds toolchain-free (no C deps like QuickJS).
boa_engine = "0.21"
# Direct dependency so boa's `#[derive(Trace, Finalize)]` macros (which expand to
# `::boa_gc::…` paths) resolve. Version must track boa_engine's.
boa_gc = "0.21"

# keyring needs a per-platform backend feature; without one it silently uses an
# in-memory mock store that loses every password when the app exits (which made
# saved connections fail with "no password supplied" after a restart).
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[dependencies.mongodb]
version = "3.2.1"

[dev-dependencies]
tempfile = "3"
