[package]
name = "ozendb"
version = "0.1.1"
description = "An open-source, free desktop GUI for managing MongoDB — a community alternative to Studio 3T."
authors = ["Akhilbek Abilaev <abilaevaqil@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/AqilbekAbilaev/ozendb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ozendb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde_json = { version = "1", features = ["raw_value"] }
# Global allocator. Query results are deserialized into serde_json::Value (many tiny
# allocations per document); glibc's per-thread arenas fragment badly under that churn
# and never return the freed pages, ratcheting RSS up on repeated queries. mimalloc
# reuses small allocations cleanly and releases memory back to the OS. See main.rs.
mimalloc = "0.1"
tokio = { version = "1.32.0", features = ["full"] }
# Async read/write extension traits for the mongodb GridFS upload/download streams
# (they implement the futures-io traits).
futures-util = "0.3"
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
# Local wall-clock date/time math for the task scheduler's daily/weekly schedules
# (converting stored epoch-ms into the user's timezone to compare against "at HH:MM").
chrono = { version = "0.4", features = ["clock"] }
# Pure-Rust async SSH client for the optional SSH tunnel (port-forward to the
# remote MongoDB host). Integrates with the existing tokio runtime. Use the
# `ring` crypto backend (already built via mongodb's rustls) instead of the
# default aws-lc-rs, to avoid a second C/asm crypto build.
russh = { version = "0.61", default-features = false, features = ["ring", "flate2", "rsa"] }
# Pure-Rust JavaScript engine powering the embedded shell (IntelliShell). Pure
# Rust keeps cross-platform Tauri builds toolchain-free (no C deps like QuickJS).
boa_engine = "0.21"
# Direct dependency so boa's `#[derive(Trace, Finalize)]` macros (which expand to
# `::boa_gc::…` paths) resolve. Version must track boa_engine's.
boa_gc = "0.21"
# Streaming JSON pull-parser used by the collection importer to read a top-level
# JSON array element-by-element (bounded memory), instead of loading the whole
# file. The `serde` feature lets each element deserialize straight into a value.
struson = { version = "0.7", features = ["serde"] }
# Pure-Rust .xlsx writer for the "Export to Excel" format. No C deps; the workbook
# is assembled in memory then saved, so xlsx exports are bounded by the row limit
# (CSV/JSON remain the streaming path for very large collections).
rust_xlsxwriter = "0.96"
# Pure-Rust .docx writer for "export schema documentation" as a Word document
# (alongside the CSV form). Small reports, so the doc is built in memory then packed.
docx-rs = "0.4"

# Native OS clipboard read. WebKitGTK (Linux) refuses programmatic reads via the
# browser `navigator.clipboard.readText`, so "Paste from clipboard" in the import tab
# reads through this crate instead (X11 + Wayland backends). Standalone of Tauri, so
# it doesn't perturb the pinned tauri/wry versions.
arboard = { version = "3", features = ["wayland-data-control"] }
sqlparser = "0.62.0"
# Optional RegEx mode for "Search in…" (the search toolbar's RegEx toggle). Already
# built transitively via mongodb; promoted to a direct dependency so we can compile
# user-supplied patterns. Substring search is the default path and needs no regex.
regex = "1"

# keyring needs a per-platform backend feature; without one it silently uses an
# in-memory mock store that loses every password when the app exits (which made
# saved connections fail with "no password supplied" after a restart).
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[dependencies.mongodb]
version = "3.2.1"

[dev-dependencies]
tempfile = "3"
